# early-warning-system

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: forecast.yml  main.yml
conf/base/: catalog_features.yml  catalog_outputs.yml  catalog_sources.yml  catalog_update.yml  globals.yml  parameters.yml
data/features/ews_f_clim_10u.zarr/: .zattrs  .zmetadata
data/features/ews_f_clim_10v.zarr/: .zattrs  .zmetadata
data/features/ews_f_clim_msl.zarr/: .zattrs  .zmetadata
data/features/ews_f_clim_swc.zarr/: .zattrs  .zmetadata
data/features/ews_f_clim_tmin.zarr/: .zattrs  .zmetadata
data/features/ews_f_clim_tp.zarr/: .zmetadata
data/features/ews_f_clim_tp_chirps.zarr/: .zmetadata
data/features/ews_f_dem.zarr/: .zmetadata
data/features/ews_f_fct_10u.zarr/: .zattrs  .zmetadata
data/features/ews_f_fct_10v.zarr/: .zattrs  .zmetadata
data/features/ews_f_fct_msl.zarr/: .zattrs  .zmetadata
data/features/ews_f_fct_swc.zarr/: .zattrs  .zmetadata
data/features/ews_f_fct_tmin.zarr/: .zattrs  .zmetadata
data/geometries/: ews_polygons_hierarchy.parquet
data/models/: ews_coldspell_final_model_xgbc.pkl  ews_rainfall_final_model_xgbc.pkl
data/outputs/: ews_coldspell_update_alerts.parquet  ews_coldspell_update_predictions.parquet  ews_rainfall_update_alerts.parquet  ews_rainfall_update_predictions.parquet
notebooks/: test_pipeline.ipynb  update_forecast.py  update_pipeline.ipynb
src/early_warning_system/: __init__.py  __main__.py  datasets_registry.py  hooks.py  pipeline_registry.py  settings.py
(+331 files in other folders)
